# cmd/tec-doc-api/main.go
@@ -18,7 +18,8 @@ import (
 // @descriptionAPI Tec-Doc server
 
 // @host localhost:8002
-// @BasePath /
+// @BasePath /api/v1/
+// @schemes http
 func initConfig() (*config.Config, *zerolog.Logger, *metrics.Metrics, error) {
 	var conf config.Config
 	if err := envconfig.Process("", &conf); err != nil {
